<?xml version="1.0" encoding="utf-8"?>
<resources xmlns:tools="http://schemas.android.com/tools" tools:ignore="MissingTranslation">

    <string name="app_name">光子应用市场</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>

     <string name="xlistview_header_hint_normal">下拉刷新</string>
    <string name="xlistview_header_hint_ready">松开刷新数据</string>
    <string name="xlistview_header_hint_loading">正在加载...</string>
    <string name="xlistview_header_last_time">上次更新时间：</string>
    <string name="xlistview_footer_hint_normal">查看更多</string>
    <string name="xlistview_footer_hint_ready">松开载入更多</string>
    
    <string name="wifi_set_text">仅在wifi环境下下载</string>
    <string name="net_set_text">2/3G网络下大文件下载提醒</string>
    <string name="cache_clean_set_text">缓存达到10M自动清理</string>
    <string name="langeuage_set_text">只显示中文应用</string>
    <string name="install_set_text">下载完成后提示安装</string>
    <string name="root_install_set_text">ROOT用户快速安装</string>
    <string name="root_install_set_gray_text">下载完成后自动安装</string>
    <string name="apk_path_set_text">APK下载路径</string>
    <string name="apk_path_present_set_text">当前路径:/sdcard/dhwodnwo</string>
    
    <string name="recommended_setting_text1">应用来找我</string>
    <string name="recommended_setting_text2">您的信息设置</string>
    <string name="recommended_setting_text3">是我们推荐的依据</string>
    
    <string name="recommended_setting_text4">找应用</string>
    <string name="recommended_setting_text5">进入细分类选应用</string>
    
    <string name="app_introduce">豌豆荚收录了超过 150 万款优质 Android 应用和游戏，以及 130 多家内容提供商提供的音乐、视频、电子书、壁纸和主题。让你的手机比你想象中更强大更好玩。</string>
    <string name="dialog_waitting_title">提示</string>
    <string name="dialog_waitting_msg">请稍等&#8230;&#8230;&#8230;</string>
    
    <string name="add_avator">头像</string>
    <string name="add_nick">昵称</string>
    <string name="add_name">账号</string>
    <string name="add_name_hint">请输入昵称&#8230;</string>
    <string name="add_gender">性别</string>
    <string name="tips">提示</string>
    <string name="text_version">Version 1.0</string>
    <string name="text_copyright">Copyright ©2015 Frankli</string>
    <string name="text_user_setting">用户设置</string>
    <string name="ui_button_title_cancel">取消</string>
    <string name="ui_button_title_ok">确定</string>
    <string name="input_hint">请输入关键字搜索</string>
    <string name="loading_video">Loading video</string>
    <string name="load_more_finished">已经到底啦</string>
    <string name="load_more_failed">加载失败，点击重试</string>

</resources>
