<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@color/app_bg"
    android:orientation="vertical" >

    <include
        android:id="@+id/r_title_bar"
        layout="@layout/title_bar" />

    <RelativeLayout
        android:id="@+id/relation_app_relate"
        android:layout_width="fill_parent"
        android:layout_weight="1"
        android:layout_height="0dp"
        android:layout_margin="10dp"
        android:background="@drawable/recommended01_selecter" >

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true"
            android:orientation="vertical" 
            android:layout_margin="10dp">
            

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/recommended_setting_text1"
                android:textColor="@color/title_color"
                android:layout_gravity="center_horizontal"
                android:layout_margin="3dp"
                android:textSize="36sp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="@string/recommended_setting_text2"
                android:textColor="@color/title_color"
                android:layout_gravity="center_horizontal"
                android:textSize="18sp" />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/recommended_setting_text3"
                android:textColor="@color/title_color"
                android:layout_gravity="center_horizontal"
                android:padding="3dp"
                android:textSize="18sp" />
        </LinearLayout>
    </RelativeLayout>
    
    <RelativeLayout
        android:id="@+id/seach_app_relate"
        android:layout_width="fill_parent"
        android:layout_weight="1"
        android:layout_height="0dp"
        android:layout_marginBottom="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginLeft="10dp"
        android:background="@drawable/recommended02_selecter" >

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true"
            android:orientation="vertical" 
            android:layout_margin="10dp">
            

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/recommended_setting_text4"
                android:textColor="@color/title_color"
                android:layout_gravity="center_horizontal"
                android:layout_margin="3dp"
                android:textSize="36sp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/recommended_setting_text5"
                android:textColor="@color/title_color"
                android:layout_gravity="center_horizontal"
                android:padding="10dp"
                android:textSize="18sp" />
        </LinearLayout>
    </RelativeLayout>

</LinearLayout>