<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@color/app_bg"
    android:orientation="vertical" >

    <include
        android:id="@+id/r_title_bar"
        layout="@layout/title_bar" />

    <ScrollView 
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:scrollbars="none"
        >
    
    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:orientation="vertical" >
        <RelativeLayout
            android:id="@+id/user_set_relate"
            android:layout_width="fill_parent"
            android:layout_height="@dimen/title_height"
            android:layout_marginTop="1dp"
            android:background="@drawable/bg_round_selecter"
            android:gravity="center_vertical"
            android:orientation="horizontal" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_marginLeft="10dp"
                android:text="@string/text_user_setting"
                android:textColor="@color/text_color"
                android:textSize="@dimen/txt_size_28px" />
        </RelativeLayout>
        <RelativeLayout
            android:id="@+id/update_relate"
            android:layout_width="fill_parent"
            android:layout_height="@dimen/title_height"
            android:layout_marginTop="0.5dp"
            android:background="@drawable/bg_round_selecter"
            android:gravity="center_vertical"
            android:orientation="horizontal" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_marginLeft="10dp"
                android:text="检查更新"
                android:textColor="@color/text_color"
                android:textSize="@dimen/txt_size_28px" />
            <TextView
                android:id="@+id/version_tv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_alignParentRight="true"
                android:layout_marginRight="10dp"
                android:text=""
                android:textColor="@color/gray1"
                android:textSize="14sp" />
        </RelativeLayout>
        <RelativeLayout
            android:id="@+id/wifi_set_relate"
            android:layout_width="fill_parent"
            android:layout_height="@dimen/title_height"
            android:layout_marginTop="0.5dp"
            android:background="@drawable/bg_round_selecter"
            android:gravity="center_vertical"
            android:orientation="horizontal" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_marginLeft="10dp"
                android:text="@string/wifi_set_text"
                android:textColor="@color/text_color"
                android:textSize="@dimen/txt_size_28px" />

            <CheckBox
                android:id="@+id/wifi_set_check"
                android:layout_width="@dimen/margin_60px"
                android:layout_height="@dimen/margin_36px"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:layout_marginRight="10sp"
                android:background="@drawable/my_btn_radio_selector"
                android:button="@null"
                android:checked="true" />
        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/net_set_relate"
            android:layout_width="fill_parent"
            android:layout_height="50sp"
            android:layout_marginTop="1sp"
            android:background="@drawable/bg_round_selecter"
            android:gravity="center_vertical"
            android:orientation="horizontal"
            android:visibility="gone">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_marginLeft="10dp"
                android:gravity="center"
                android:text="@string/net_set_text"
                android:textColor="@color/text_color"
                android:textSize="16sp" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:layout_marginRight="10sp"
                android:gravity="center"
                android:orientation="horizontal" >

                <TextView
                    android:id="@+id/flow_type"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="20dp"
                    android:gravity="center"
                    android:text="10w"
                    android:textColor="@color/text_color_net"
                    android:textSize="16sp" />

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/xiangyou_icon" />
            </LinearLayout>
        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/cache_clean_relate"
            android:layout_width="fill_parent"
            android:layout_height="50sp"
            android:layout_marginTop="1sp"
            android:background="@drawable/bg_round_selecter"
            android:gravity="center_vertical"
            android:orientation="horizontal"
            android:visibility="gone">

            <CheckBox
                android:id="@+id/cache_clean_check"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:layout_marginRight="10sp"
                android:background="@drawable/my_btn_radio_selector"
                android:button="@null"
                android:checked="true" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_marginLeft="10dp"
                android:gravity="center"
                android:text="@string/cache_clean_set_text"
                android:textColor="@color/text_color"
                android:textSize="16sp" />
        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/langeuage_set_relate"
            android:layout_width="fill_parent"
            android:layout_height="50sp"
            android:layout_marginTop="1sp"
            android:background="@drawable/bg_round_selecter"
            android:gravity="center_vertical"
            android:orientation="horizontal"
            android:visibility="gone">

            <CheckBox
                android:id="@+id/langeuage_check"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:layout_marginRight="10sp"
                android:background="@drawable/my_btn_radio_selector"
                android:button="@null"
                android:checked="true" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_marginLeft="10dp"
                android:gravity="center"
                android:text="@string/langeuage_set_text"
                android:textColor="@color/text_color"
                android:textSize="16sp" />
        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/install_set_relate"
            android:layout_width="fill_parent"
            android:layout_height="50sp"
            android:layout_marginTop="1sp"
            android:background="@drawable/bg_round_selecter"
            android:gravity="center_vertical"
            android:orientation="horizontal"
            android:visibility="gone">

            <CheckBox
                android:id="@+id/install_check"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:layout_marginRight="10sp"
                android:background="@drawable/my_btn_radio_selector"
                android:button="@null"
                android:checked="true" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_marginLeft="10dp"
                android:gravity="center"
                android:text="@string/install_set_text"
                android:textColor="@color/text_color"
                android:textSize="16sp" />
        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/root_install_set_relate"
            android:layout_width="fill_parent"
            android:layout_height="50sp"
            android:layout_marginTop="1sp"
            android:background="@drawable/bg_round_selecter"
            android:gravity="center_vertical"
            android:orientation="horizontal"
            android:visibility="gone">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_marginLeft="10dp"
                android:orientation="vertical" >

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/root_install_set_text"
                    android:textColor="@color/text_color"
                    android:textSize="16sp" />
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/root_install_set_gray_text"
                    android:textColor="@color/gray1"
                    android:textSize="12sp" />
            </LinearLayout>

            <CheckBox
                android:id="@+id/root_install_check"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:layout_marginRight="10sp"
                android:background="@drawable/my_btn_radio_selector"
                android:button="@null"
                android:checked="true" />
        </RelativeLayout>
        
        <RelativeLayout
            android:id="@+id/apk_path_set_relate"
            android:layout_width="fill_parent"
            android:layout_height="50sp"
            android:layout_marginTop="1sp"
            android:background="@drawable/bg_round_selecter"
            android:gravity="center_vertical"
            android:orientation="horizontal"
            android:visibility="gone">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_marginLeft="10dp"
                android:orientation="vertical" >

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/apk_path_set_text"
                    android:textColor="@color/text_color"
                    android:textSize="16sp" />
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/apk_path_present_set_text"
                    android:textColor="@color/gray1"
                    android:textSize="12sp" />
            </LinearLayout>

            <CheckBox
                android:id="@+id/apk_path_check"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:layout_marginRight="10sp"
                android:background="@drawable/my_btn_radio_selector"
                android:button="@null"
                android:checked="true" />
        </RelativeLayout>
        <RelativeLayout
            android:id="@+id/about_us_relate"
            android:layout_width="fill_parent"
            android:layout_height="50dp"
            android:layout_marginTop="1dp"
            android:background="@drawable/bg_round_selecter"
            android:gravity="center_vertical"
            android:orientation="horizontal"
            android:visibility="gone">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_marginLeft="10dp"
                android:text="关于我们"
                android:textColor="@color/text_color"
                android:textSize="16sp" />
        </RelativeLayout>
        
        <LinearLayout 
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        android:layout_marginTop="40dp"
        android:paddingBottom="20dp"
        >
          
          
        <TextView
        android:id="@+id/logout_text"
        android:layout_width="0dp"
        android:layout_weight="1"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:background="@drawable/gray_btn_selector"
        android:text="退出登录"
            android:padding="@dimen/margin_20px"
        android:textColor="#ffffff"
        android:textSize="@dimen/txt_size_28px" />
    </LinearLayout>
        
    </LinearLayout>
</ScrollView>
</LinearLayout>